fix: correct typo in FRONTEND_PROD_URL in .env.example

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=mongodb://localhost:27017/taskmanager
 JWT_SECRET=your-super-secret-jwt-key
 FRONTEND_URL=http://localhost:3000
+FRONTEND_PROD_URL=hhtp://localhost:5000
 PORT=5000
