--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/server.js",
-    "vercel-build": "npm run build",
     "dev": "nodemon src/server.ts"
   },
   "keywords": [],
